--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "strainapi-client",
   "version": "1.0.0",
-  "description": "",
+  "description": "client-side API client for https://strains.evanbusse.com/",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
