--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "strainapi-client",
+  "name": "strainsapi-client",
   "version": "1.0.0",
   "description": "client-side API client for https://strains.evanbusse.com/",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "@greensudo <greensudodev@gmail.com>",
   "license": "MIT",
   "dependencies": {}
 }
