--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "strainsapi-client",
-  "version": "0.1.1",
+  "version": "1.1.1",
   "repository": {
     "type": "git",
     "url": "git@github.com:greensudo/strains-api-client.git"
@@ -17,5 +17,14 @@
     "@babel/plugin-proposal-class-properties": "^7.7.4",
     "@babel/preset-env": "^7.7.7",
     "@babel/preset-react": "^7.7.4"
-  }
+  },
+  "babel": {
+        "presets": [
+          "@babel/preset-env",
+          "@babel/preset-react"
+        ],
+        "plugins": [
+            "@babel/plugin-proposal-class-properties"
+        ]
+    }
 }
