--- a/.babelrc
+++ b/.babelrc
@@ -1,11 +1,13 @@
 {
     "babel": {
         "presets": [
-            "@babel/preset-env",
-            "@babel/preset-react"
+            "@babel/preset-env"
         ],
         "plugins": [
-            "@babel/plugin-proposal-class-properties"
+            "@babel/plugin-proposal-class-properties",
+            {
+                "loose": true
+            }
         ]
     }
 }
