--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "strainsapi-client",
-  "version": "1.1.2",
+  "version": "0.0.1",
   "repository": {
     "type": "git",
     "url": "git@github.com:greensudo/strains-api-client.git"
@@ -15,13 +15,11 @@
   "dependencies": {},
   "devDependencies": {
     "@babel/plugin-proposal-class-properties": "^7.7.4",
-    "@babel/preset-env": "^7.7.7",
-    "@babel/preset-react": "^7.7.4"
+    "@babel/preset-env": "^7.7.7"
   },
   "babel": {
         "presets": [
-          "@babel/preset-env",
-          "@babel/preset-react"
+          "@babel/preset-env"
         ],
         "plugins": [
             "@babel/plugin-proposal-class-properties"
